[tool.poetry]
name = "hexlet-code"
version = "\\"
description = "task manager"
authors = ["Вячеслав <goplit2010.konovalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
heroku = "^0.1.4"
python-dotenv = "^0.19.2"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
