[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task-manager"
authors = ["Вячеслав <goplit2010.konovalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
python-dotenv = "^0.19.2"
heroku = "^0.1.4"
dj-database-url = "^0.5.0"
django-bootstrap4 = "^21.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
django-filter = "^21.1"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
